column spacing is correct - on to next step

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -10,7 +10,7 @@ body {
 .header {
   display: flex;
   align-items: center;
-  position: fixed;
+  position: fixed; 
   z-index: 10;
 
   font-family: Verdana;
@@ -49,17 +49,20 @@ nav a {
 }
 
 /* Main Body */
+/* main container */
 .content {
   position: relative;
-  top: 81px;
-  padding-top: 81px;
+  padding-top: 116px;
+  margin: 0 auto 78px auto;
+  width: 1230px;
   display: flex;
 }
 
+/* columns */
 .column {
   display: flex;
   flex-direction: column;
-  margin-right: 20px;
+  margin-right: 32px;
 }
 
 .column.large {
